# MatPL

./: .gitignore  ARCHITECTURE_MINDMAP.md  README.md  convert_dp.py  main.py  requirements.txt  requirements_cpu.txt
example/Ag-Au-D3/DP/: adam_train.json  lkf_train.json
example/Ag-Au-D3/NEP/: adam_nep.json  lkf_nep.json  test.json
example/AuAg/: dp_adam.json  dp_adam_nocos.json  dp_lkf.json  nep_adam.json  nep_adam_cos.json  nep_lkf.json
example/Cu/nn_demo/: train.job  train_mcloud.job  train_station.job
example/Cu/nn_demo/nn_lmps/: runcpu.job  runcpu_station.job
example/HfO2/dp_demo/: train.job  train_mcloud.job  train_station.job
example/HfO2/dp_demo/dp_lmps/: in.lammps  rungpu_station.job
example/HfO2/dp_demo/nn_lmps/: runcpu_mcloud.job  runcpu_station.job
example/HfO2/nep_demo/: train.job  train_station.job
example/HfO2/nep_demo/nep_lmps/: runcpu.job  runcpu_station.job
example/HfO2/nep_demo/nep_lmps_deviation/: runcpu.job  rungpu_mcloud.job
example/LiGePS/: train.json
example/LiSiC/: dp_train.json  nep_train.json
example/SiC/: linear_test.json  train.job  train_mcloud.job  train_station.job
example/SiC/linear_lmps/: log.lammps  runcpu.job  runcpu_mcloud.job  runcpu_station.job
example/ase_calculator/test_dp/: ase_run.job  ase_test.py  test.job  test.json
example/ase_calculator/test_nep/: ase_test.py  nep_model.ckpt  nep_to_lmps.txt  test.json
example/parallelnep/: 1node-1g-run.job  1node-4g-run.job  2node-8g-run.job  train.json
src/: build.sh  clean.sh  tmp.sh
src/PWMLFF/: cheby_network.py  dp_network.py  dp_param_extract.py  linear_regressor.py  nep_network.py  nn_network.py  nn_param_extract.py
src/PWMLFF/cheby_mods/: cheby_trainer.py
src/PWMLFF/dp_mods/: dp_trainer.py
src/PWMLFF/nep_mods/: nep_trainer.py
src/PWMLFF/nn_mods/: nn_trainer.py
src/ase/: calculate.py
src/aux/: extract_dp.py  extract_nn.py  inference_plot.py  plot_evaluation.py
src/check/: check_env.sh  check_env_cpu.sh  check_offenv.sh  check_offenv_cpu.sh
src/check/pack_cpu/: allzip.sh  matpl_cpu-2025.3.sh.template
src/check/pack_gpu/: allzip-2026.3.sh  allzip.sh  matpl-2025.3.sh.template  matpl-2026.3.sh.template
src/check/patch/: allzip.sh  check_diff.sh  check_offenv.sh  cmp_fortran.sh  cmp_lmps.sh  cmp_lmps_fortran.sh  cmp_nepcpu.sh  cmp_nepgpu.sh  cmp_op.sh  matpl-2025.3-patch.template  pack.sh  test_diff.sh
src/check/patch-2025.3/: allzip.sh  check_diff.sh  cmp_fortran.sh  cmp_lmps_fortran.sh  cmp_nepgpu.sh  cmp_pip.sh
src/check/patch-2025.3/25-3-bk/: cmp_fortran.sh  cmp_lmps.sh  cmp_nepcpu.sh  cmp_pip.sh
src/check/patch/25-3-bk/: allzip.sh  check_diff.sh  cmp_lmps_fortran.sh  cmp_nepgpu.sh  cmp_op.sh  matpl-2025.3-patch.template
src/feature/: cpu.sh  gpu.sh
src/feature/NEP_GPU/: CMakeLists.txt
src/feature/NEP_GPU/force/: nep.cu  nep.cuh  nep3.cu  nep3.cu.bk  nep3.cuh  nep3_large_box.cuh.bk  nep3_pybind.cpp  nep3_small_box.cuh  nep_functions.cuh  nep_pybind.cpp
src/feature/NEP_GPU/utilities/: nep_utilities.cuh
src/feature/nep_find_neigh/: CMakeLists.txt
src/feature/nep_find_neigh/src/: dp.cpp  dp.h  nep.cpp  nep.h  pynep.cpp
src/lmps/lammps-2026.3/MATPL/: pair_matpl.h
src/lmps/lammps-libtorch/MATPL/: nep_cpu.cpp  nep_cpu.h
src/lmps/lammps-libtorch/MATPL/NEP_GPU/force/: nep3.cu  nep3.cuh  nep3_large_box.cuh
src/loss/: dploss.py
src/model/: cheby_net.py  dp_dp.py  dp_dp_typ_emb.py  dp_dp_typ_emb_Gk5.py  dp_dp_typ_emb_script.py  nep_fitting.py  nep_net.py
src/mods/: infer.py
src/op/: CMakeLists.txt
src/op/cmake/cpu/: CMakeLists.txt
src/op/cmake/gpu/: CMakeLists.txt
src/op/include/: CalcOps.h  nep_cpu.h
src/op/kernel/: calculateNepFeat.cu  calculateNepFeat_grad.cu  calculateNepFeat_secondgradout.cu  calculateNepMbFeat.cu  calculateNepMbFeat_grad.cu  calculateNepMbFeat_secondgradout.cu  calculateNepNeighbor.cu
src/op/kernel/utilities/: nep_feature.cuh  nep_mbgrad.cuh  nep_utilities.cuh  nep_utilities_mb_secondc.cuh
src/op/src/: CalcOps.cpp  cpu_calculate_nepneighbor.cpp
src/optimizer/: KFWrapper.py
src/pre_data/: dp_data_loader.py  dp_mlff.py  dpuni_data_loader.py  nep_data_loader.py  nep_gen_data.py  read_torch_wij.py
src/test/: README.md  ase_test.py  template_train.json
src/user/: cheby_work.py  ckpt_compress.py  ckpt_extract.py  convert_model.py  dp_work.py  envs.py  extract_raw.py  gpumd_param.py  gpumd_work.py  infer_main.py  input_param.py  input_param_tmp.py  kpu_dp.py  linear_work.py  lmps_param.py  model_param.py  nep_param.py  nep_work.py  nn_feature_type.py  nn_work.py  optimizer_param.py  work_file_param.py  work_file_param_tmp.py
src/utils/: plot_learningrate.py  read_torch_wij_correct.py  read_torch_wij_dp.py  train_log.py
utils/: debug_operation.py  file_operation.py  learning_rate.py  nep_to_gpumd.py  plot_learningrate.py  read_torch_wij.py  train_log.py
